fixed gap between portfolio and timeline

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ li {
 
 .portfolio {
     display: flex;
+    padding-bottom: 200px;
 }
 
 .portfolioitemcontainer {
